--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="topsectionforaddingelementtolist">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>todo</h3>
-      <ul id="incompletetasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">pay bills</label>
@@ -27,7 +27,7 @@
           <button class="edit">edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editmode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">go shopping</label>
           <input type="text" value="go shopping" class="task">
