--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topsectionforaddingelementtolist">
+    <div class="main">
+      <p id="add-task">
         <label for="new-task">add item</label>
-        <div class="task-row-wrapper">
+        <div class="add-task-input">
           <input id="new-task" class="task" type="text">
           <button>add</button>
         </div>
