--- a/index.html
+++ b/index.html
@@ -6,46 +6,50 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg" class="header-img">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-task">
+    </header>
+    <main class="main">
+      <div id="add-task">
         <label for="new-task" class="label-new-task">Add item</label>
         <div class="add-task-input">
           <input id="new-task" class="input-text task" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="heading">todo</h3>
-      <ul id="incomplete-tasks" class="list">
-        <li class="list-item">
-          <input type="checkbox" class="input-checkbox">
-          <label class="label task">pay bills</label>
-          <input type="text" class="input-text task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
-        </li>
-        <li class="list-item edit-mode">
-          <input type="checkbox" class="input-checkbox">
-          <label class="label task">go shopping</label>
-          <input type="text" value="go shopping" class="input-text task">
-          <button class="btn edit">Save</button>
-          <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
-        </li>
-      </ul>
-      <h3 class="heading">completed</h3>
-      <ul id="completed-tasks" class="list">
-        <li class="list-item">
-          <input type="checkbox" class="input-checkbox" checked>
-          <label class="label task">see the doctor</label>
-          <input type="text" class="input-text task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
-        </li>
-      </ul>
-    </div>
+      </div>
+      <section>
+        <h3 class="heading">todo</h3>
+        <ul id="incomplete-tasks" class="list">
+          <li class="list-item">
+            <input type="checkbox" class="input-checkbox">
+            <label class="label task">pay bills</label>
+            <input type="text" class="input-text task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+          </li>
+          <li class="list-item edit-mode">
+            <input type="checkbox" class="input-checkbox">
+            <label class="label task">go shopping</label>
+            <input type="text" value="go shopping" class="input-text task">
+            <button class="btn edit">Save</button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="heading">completed</h3>
+        <ul id="completed-tasks" class="list">
+          <li class="list-item">
+            <input type="checkbox" class="input-checkbox" checked>
+            <label class="label task">see the doctor</label>
+            <input type="text" class="input-text task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
