fix(extended-1.2): add an alt-attribute to each img element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header-img">
+      <img src="./eisenhower-matrix.jpg" class="header-img" alt="header image">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
     </header>
     <main class="main">
@@ -26,14 +26,14 @@
             <label class="label task">pay bills</label>
             <input type="text" class="input-text task">
             <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
           </li>
           <li class="list-item edit-mode">
             <input type="checkbox" class="input-checkbox">
             <label class="label task">go shopping</label>
             <input type="text" value="go shopping" class="input-text task">
             <button class="btn edit">Save</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
           </li>
         </ul>
       </section>
@@ -45,7 +45,7 @@
             <label class="label task">see the doctor</label>
             <input type="text" class="input-text task">
             <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img"></button>
+            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
           </li>
         </ul>
       </section>
