--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header-img" alt="header image">
+      <img src="./eisenhower-matrix.jpg" class="header__img" alt="header image">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">want more details?</a>
     </header>
     <main class="main">
       <div id="add-task">
-        <label for="new-task" class="label-new-task">Add item</label>
-        <div class="add-task-input">
-          <input id="new-task" class="input-text task" type="text">
+        <label for="new-task" class="add-task__label">Add item</label>
+        <div class="add-task__input-wrapper">
+          <input id="new-task" class="input-text input-text_task" type="text">
           <button class="btn">Add</button>
         </div>
       </div>
       <section>
         <h3 class="heading">todo</h3>
         <ul id="incomplete-tasks" class="list">
-          <li class="list-item">
-            <input type="checkbox" class="input-checkbox">
-            <label class="label task">pay bills</label>
-            <input type="text" class="input-text task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
+          <li class="list__item">
+            <input type="checkbox" class="input__checkbox">
+            <label class="label label_task">pay bills</label>
+            <input type="text" class="list__input-text input-text input-text_task">
+            <button class="btn btn_edit">Edit</button>
+            <button class="btn btn_delete"><img src="./remove.svg" class="btn__img" alt="button image"></button>
           </li>
-          <li class="list-item edit-mode">
-            <input type="checkbox" class="input-checkbox">
-            <label class="label task">go shopping</label>
-            <input type="text" value="go shopping" class="input-text task">
-            <button class="btn edit">Save</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
+          <li class="list__item list__item_edit">
+            <input type="checkbox" class="input__checkbox">
+            <label class="label label_task">go shopping</label>
+            <input type="text" value="go shopping" class="list__input-text input-text input-text_task">
+            <button class="btn btn_edit">Save</button>
+            <button class="btn btn_delete"><img src="./remove.svg" class="btn__img" alt="button image"></button>
           </li>
         </ul>
       </section>
       <section>
         <h3 class="heading">completed</h3>
         <ul id="completed-tasks" class="list">
-          <li class="list-item">
-            <input type="checkbox" class="input-checkbox" checked>
-            <label class="label task">see the doctor</label>
-            <input type="text" class="input-text task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="delete-img" alt="button image"></button>
+          <li class="list__item">
+            <input type="checkbox" class="input__checkbox" checked>
+            <label class="label label_task label_task-completed">see the doctor</label>
+            <input type="text" class="list__input-text input-text input-text_task">
+            <button class="btn btn_edit">Edit</button>
+            <button class="btn btn_delete"><img src="./remove.svg" class="btn__img" alt="button image"></button>
           </li>
         </ul>
       </section>
